[package]
name = "lantana-core"
version = "0.1.0"
authors = ["segfo <k.segfo@gmail.com>"]
edition = "2018"

[dependencies]
toml = "0.4"
serde = "1.0.87"
serde_derive = "1.0.87"
fs2 = "0.4.3"
chrono = "0.4.6"
libloading = "0.5"
kernel32-sys = "0.2.2"
winapi = "0.3.6"
log = "0.4"
log4rs = { version = "0.8.1", features = ["toml_format"] }
iris-api = {path="../iris-api"}
time = "0.1"
ctrlc = "3.1.1"